--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="../node_modules/@pnotify/core/dist/PNotify.css" rel="stylesheet" type="text/css" />
+  <link href="../node_modules/@pnotify/mobile/dist/PNotifyMobile.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-  <h1>привет</h1>
-  <form class="search-form" id="search-form">
-    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
-  </form>
-<script src="./index.js" type="module"></script>
-<script src="./fetchCountries.js" type="module"></script>
+<body><div><label>
+  Search by country name:
+  <input type="text" id="search" name="countryName">
+</label>
+</div>
+  <div id="conatiner"></div>
+<script src="./index.js"></script> 
+<!-- <script src="./fetchCountries.js"></script>  -->
 </body>
 </html>
