--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
   <title>Document</title>
   <link href="../node_modules/@pnotify/core/dist/PNotify.css" rel="stylesheet" type="text/css" />
   <link href="../node_modules/@pnotify/mobile/dist/PNotifyMobile.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body><div><label>
   Search by country name:
   <input type="text" id="search" name="countryName">
 </label>
 </div>
-  <div id="conatiner"></div>
+  <div id="container"></div>
 <script src="./index.js"></script> 
 <!-- <script src="./fetchCountries.js"></script>  -->
 </body>
